--- a/public/less/mobile/address_list.less
+++ b/public/less/mobile/address_list.less
@@ -3,6 +3,13 @@
   .content-block{
     padding: 0;
   }
+  .default-label{
+    color: #fff;
+    font-size: 0.6rem;
+    padding: 0.1rem 0.2rem;
+    border-radius: 3px;
+    background: #fe406e;
+  }
   .edit_default{
     height: 1rem;
     padding: 0.5rem;
