--- a/app/views/mobile/product_details/index.jade
+++ b/app/views/mobile/product_details/index.jade
@@ -93,10 +93,7 @@ block content
                     td.param-info 夏季
       .recommend
     .detail-footbar
-      .footer-fav
-        i.fa.fa-star-o
-        span.text 收藏
-      .footer-cart
+      a.footer-cart(href="/cart")
         i.fa.fa-shopping-cart
         span.text 购物车
       .footer-buy
