--- a/app/views/mobile/order/_new_address.jade
+++ b/app/views/mobile/order/_new_address.jade
@@ -12,7 +12,7 @@
             .item-inner
               .item-title.label 收货人
               .item-input
-                input(type="text",name="name",placeholder="请输入真实姓名")
+                input(type="text",name="recipient",placeholder="请输入真实姓名")
         li
           .item-content
             .item-inner
