--- a/public/less/mobile/address_list.less
+++ b/public/less/mobile/address_list.less
@@ -3,7 +3,11 @@
   .content-block{
     padding: 0;
   }
+  .address.default .default-label{
+    display: inline;
+  }
   .default-label{
+    display: none;
     color: #fff;
     font-size: 0.6rem;
     padding: 0.1rem 0.2rem;
