--- a/public/style/global.css
+++ b/public/style/global.css
@@ -1059,7 +1059,11 @@ header.bar.bar-nav form .search-btn {
 .popup-address .content-block {
   padding: 0;
 }
+.popup-address .address.default .default-label {
+  display: inline;
+}
 .popup-address .default-label {
+  display: none;
   color: #fff;
   font-size: 0.6rem;
   padding: 0.1rem 0.2rem;
