--- a/public/less/mobile/address_list.less
+++ b/public/less/mobile/address_list.less
@@ -1,8 +1,4 @@
 .popup-address{
-  background: #f5f5f5;
-  .content-block{
-    padding: 0;
-  }
   .address.default .default-label{
     display: inline;
   }
@@ -45,6 +41,7 @@
   }
 }
 .popup-new,.popup-address{
+  background: #f5f5f5;
   .header{
     .title{
       margin: auto;
@@ -52,6 +49,7 @@
     }
   }
   .content-block{
+    padding: 0;
     margin: 2.1rem 0;
   }
   .title_right{
@@ -63,4 +61,14 @@
 }
 
 .popup-new{
+  .delete-btn{
+    width: 6rem;
+    height: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    background: #fff;
+    border-radius: 0.75rem;
+    border: 1px solid #e5e5e5;
+    margin: 1rem auto;
+  }
 }
