--- a/public/style/mobile/address_list.css
+++ b/public/style/mobile/address_list.css
@@ -1,9 +1,3 @@
-.popup-address {
-  background: #f5f5f5;
-}
-.popup-address .content-block {
-  padding: 0;
-}
 .popup-address .address.default .default-label {
   display: inline;
 }
@@ -44,6 +38,10 @@
   background: #fe406e;
   margin: 0.25rem auto 0;
 }
+.popup-new,
+.popup-address {
+  background: #f5f5f5;
+}
 .popup-new .header .title,
 .popup-address .header .title {
   margin: auto;
@@ -51,6 +49,7 @@
 }
 .popup-new .content-block,
 .popup-address .content-block {
+  padding: 0;
   margin: 2.1rem 0;
 }
 .popup-new .title_right,
@@ -59,4 +58,14 @@
   width: 2rem;
   line-height: 2rem;
   margin-right: 0.5rem;
+}
+.popup-new .delete-btn {
+  width: 6rem;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  text-align: center;
+  background: #fff;
+  border-radius: 0.75rem;
+  border: 1px solid #e5e5e5;
+  margin: 1rem auto;
 }
