--- a/public/less/mobile/order.less
+++ b/public/less/mobile/order.less
@@ -1,5 +1,16 @@
 /* creat_order list */
 .create_order{
+  .address.default .default-label{
+    display: inline;
+  }
+  .default-label{
+    display: none;
+    color: #fff;
+    font-size: 0.6rem;
+    padding: 0.1rem 0.2rem;
+    border-radius: 3px;
+    background: #fe406e;
+  }
   .address{
     background: #fff;
   }
