--- a/public/style/mobile/order.css
+++ b/public/style/mobile/order.css
@@ -1,4 +1,15 @@
 /* creat_order list */
+.create_order .address.default .default-label {
+  display: inline;
+}
+.create_order .default-label {
+  display: none;
+  color: #fff;
+  font-size: 0.6rem;
+  padding: 0.1rem 0.2rem;
+  border-radius: 3px;
+  background: #fe406e;
+}
 .create_order .address {
   background: #fff;
 }
