--- a/app/views/mobile/order/order_list.jade
+++ b/app/views/mobile/order/order_list.jade
@@ -3,7 +3,7 @@ block content
   .page.create_order
     .popup-address
       header.head-block.bar.bar-nav.header
-        a.arr.close-popup(href="javascript:void(0);",data-popup=".popup-address")
+        a.arr(href="javascript:history.back();")
           i.fa.fa-angle-left
         h1.title 地址管理
         span.title_right.j-edit.j-select-status 编辑
