--- a/public/style/global.css
+++ b/public/style/global.css
@@ -1064,6 +1064,79 @@ header.bar.bar-nav form .search-btn {
 .create_order .footer .pieces_count {
   line-height: 1;
 }
+.order_list .all-order {
+  padding-top: 2rem;
+}
+.order_list .orders-item {
+  font-size: 0.6rem;
+  margin-top: 0.5rem;
+  background: #fff;
+}
+.order_list .item-head {
+  border-bottom: 1px solid #e5e5e5;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  padding: 0 0.5rem;
+}
+.order_list .order-id {
+  color: #9a9a9a;
+  float: left;
+}
+.order_list .order-status {
+  float: right;
+}
+.order_list .order {
+  padding: 0.5rem;
+  padding-left: 3.5rem;
+  border-bottom: 1px solid #e5e5e5;
+  position: relative;
+  display: -webkit-flex;
+  display: -moz-box;
+  /* Firefox */
+  display: -webkit-box;
+  /* Safari and Chrome */
+  display: box;
+}
+.order_list .order .msg {
+  width: 2rem;
+}
+.order_list .order-img {
+  position: absolute;
+  left: 0.5rem;
+  top: 0.5rem;
+  width: 2.7rem;
+  height: 2.7rem;
+  overflow: hidden;
+}
+.order_list .order-img img {
+  width: 100%;
+}
+.order_list .order-desc {
+  -webkit-box-flex: 1;
+  box-flex: 1;
+}
+.order_list .item-footer {
+  padding: 0.75rem 0.5rem ;
+}
+.order_list .item-footer .sum {
+  text-align: right;
+}
+.order_list .item-footer em {
+  color: #383838;
+  font-size: 0.7rem;
+}
+.order_list .item-footer .operate {
+  float: right;
+  height: 1.3rem;
+  margin-top: 0.5rem;
+}
+.order_list .item-footer .red-btn {
+  color: #e94e7a;
+  padding: 0.25rem 0.75rem;
+  border-radius: 1rem;
+  border: 1px solid #e94e7a;
+  margin: 0 0.25rem;
+}
 .popup-address .edit_default {
   height: 1rem;
   padding: 0.5rem;
@@ -1123,4 +1196,72 @@ header.bar.bar-nav form .search-btn {
   border-radius: 0.75rem;
   border: 1px solid #e5e5e5;
   margin: 1rem auto;
+}
+.homepage .home-header {
+  background: #fff;
+  display: -webkit-flex;
+  display: -moz-box;
+  /* Firefox */
+  display: -webkit-box;
+  /* Safari and Chrome */
+  display: box;
+  width: 100%;
+  height: 5rem;
+  padding: 1rem;
+  line-height: 3rem;
+  border-bottom: 1px solid #e5e5e5;
+}
+.homepage .home-header .portrait {
+  display: inline-block;
+  font-size: 0;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  border: 1px solid #e5e5e5;
+  text-align: center;
+}
+.homepage .home-header .name {
+  -webkit-box-flex: 1;
+  box-flex: 1;
+  vertical-align: middle;
+  padding-left: 0.5rem;
+}
+.homepage .application {
+  background: #fff;
+}
+.homepage .application .line {
+  display: -webkit-flex;
+  display: flex;
+  display: -moz-box;
+  /* Firefox */
+  display: -webkit-box;
+  /* Safari and Chrome */
+  display: box;
+  border-bottom: 1px solid #e5e5e5;
+}
+.homepage .application .block {
+  display: block;
+  font-size: 0.6rem;
+  -webkit-box-flex: 1;
+  box-flex: 1;
+  padding: 0.5rem 0;
+  text-align: center;
+  position: relative;
+  border-right: 1px solid #e5e5e5;
+}
+.homepage .application .fa {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+.homepage .application .tips {
+  font-size: 0.6rem;
+  color: #fff;
+  width: 1rem;
+  height: 1rem;
+  line-height: 1rem;
+  border-radius: 50%;
+  position: absolute;
+  top: 0rem;
+  right: 1rem;
+  background: #ff5e7a;
 }
